# stopspyingonme

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  FOUNDATION_COMPLETE.md  LICENSE  README.md  WARP.md  deps.txt  dev-requirements.txt  docker-compose.yml  email-privacy-design.md  last-changes.md  pyproject.toml  requirements.txt  server.py  setup.cfg  test_send.py
.amazonq/prompts/: work-ticket.md
.amazonq/rules/: communication-standards.md  core-principles.md  dependency-inversion.md  development-documentation-flow.md  implementation-guidelines.md  interface-segregation.md  open-closed.md  python-environment.md  single-responsibility.md  test-coverage-standards.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1765f27dd620_add_passkey_model.py  1f21d4c2b037_add_core_models_users_destinations_.py  3b1990b09574_initial_migration_with_pgcrypto.py  847c897c6a58_update_alias_model_with_labels_notes_.py  d7960a2fd8bf_fix_duplicate_index_definitions.py
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/api/v1/: aliases.py  auth.py  health.py  router.py
app/config/: __init__.py  environments.py  main.py
app/db/: base.py  session.py
app/middleware/: logging.py  session.py
app/models/: __init__.py  alias.py  base.py  destination.py  magic_link_token.py  passkey.py  session.py  user.py
app/schemas/: __init__.py  alias.py  auth.py  base.py  destination.py
app/services/: alias.py  email.py  magic_link.py  session.py  webauthn.py
app/templates/email/: email_verification.txt  magic_link.txt
app/utils/: logging.py
docker/: Dockerfile.dev  Dockerfile.prod
docs/: DEVELOPMENT.md  IMPLEMENTATION-PLAN.md  agentic-prompts.md  current-state.md  email-privacy-design.md  visual-style-guide.md
docs/epics/: alias-routing-management.md  authentication-accounts.md  background-jobs-workers.md  bandwidth-subscription-enforcement.md  dashboard-aliases-destinations.md  dashboard-bandwidth-message-flow.md  dashboard-settings-account.md  data-security-privacy.md  deployment-shared-hosting.md  email-ingest-forwarding-shared-hosting.md  foundation-codebase-setup.md  spam-filtering-quarantine.md  webhooks-integrations.md
docs/specs/: abuse-reporting.md  alias-naming-rules.md  bandwidth-enforcement.md  email-verification.md  mail-validation-and-headers.md  notification-personas.md  plan-tiers.md  provider-selection.md  sliding-thresholds.md  spam-filtering-mvp.md  webhook-events.md
scripts/: generate_secret_key.py  init_db.py  lint.sh  seed_db.py  setup-pre-commit.sh  wipe_db.py  wipe_reseed.py
tests/: conftest.py  factories.py  test_dependencies.py  test_exceptions.py  test_factories.py  test_server.py
tests/mocks/: __init__.py  email.py
tests/test_api/: test_aliases.py  test_auth.py  test_error_handling.py  test_health.py  test_main.py
tests/test_schemas/: __init__.py  test_validation.py
tests/test_services/: test_alias.py  test_email.py  test_magic_link.py  test_session.py  test_webauthn.py
